@@ -1,7 +1,6 @@
 List of stuff to do:
 
 - Add support for folders/tree
-- Add keypassx import script
 - Test interoperability with other password safe compatible apps
 - Improve icon
 - Design a better layout for details pane
